Fixed intro section being off-centre

--- a/website/static/css/base.css
+++ b/website/static/css/base.css
@@ -20,7 +20,7 @@
     --btn-gradient: linear-gradient(-45deg, #23a6d5, #23d5ab);
     --bg-gradient: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
     
-    --fs-h1: 2rem;
+    --fs-h1: 1.5rem;
     --fs-h2: 1.5rem;
     --fs-h3: 1.125rem;
     --fs-body: 0.9rem;
@@ -45,7 +45,7 @@
     --c3: #dddddd;
 }
 
-@media (min-width: 800px) {
+@media (min-width: 1000px) {
     :root {
         --fs-h1: 2.5rem;
         --fs-h2: 2rem;
@@ -189,6 +189,12 @@ section {
     font-size: var(--fs-body);
 }
 
+@media (max-width: 800px) {
+    .nav-bar {
+        margin: 0;
+    }
+}
+
 .nav-bar a {
     background: var(--clr-light);
     background-clip: text;
@@ -264,6 +270,7 @@ section {
     display: block;
     height: calc(100vh - 2em);
     text-align: center;
+    position: relative;
 }
 
 .intro_title {
@@ -279,12 +286,18 @@ section {
 }
 
 .intro-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 85%;
-    margin: 0 2em;
+    max-width: 100%;
+    margin: 0 4em;
+    transform: translateY(25%);
+}
+
+@media (max-width: 800px) {
+    .intro-text {
+        transform: none;
+    }
+    .intro {
+        height: unset;
+    }
 }
 
 .intro-text .section_title {
@@ -325,10 +338,13 @@ section {
     scale: 1.2;
 }
 
+.scroll_down_wrapper {
+    display: flex;
+    justify-content: center;
+}
+
 .scroll_down {
-    position: absolute;
-    top: 90%;
-    left: 50%;
+    margin-top: 2em;
     width: 60px;
     height: 60px;
     border: 2px solid var(--clr-dark);
@@ -659,6 +675,15 @@ input[type=text], select, textarea {
     margin-right: 2em;
 }
 
+@media (max-width: 800px) {
+    .footer_desc {
+        margin: 0 3em 0 1em;
+    }
+    .footer_social {
+        margin-right: 1em;
+    }
+}
+
 .footer_my_name,
 .footer_social_title {
     font-size: var(--fs-h3);
@@ -678,6 +703,17 @@ input[type=text], select, textarea {
     color: var(--clr-light);
     font-size: 1.2em;
     margin: 0.5em 0 0.5em 1em;
+}
+
+@media (max-width: 800px) {
+    .footer_social_links {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+    }
+    .footer_social_links i {
+        margin: 0;
+    }
 }
 
 
